--- a/client/package.json
+++ b/client/package.json
@@ -6,6 +6,7 @@
     "babel-core": "^5.1.11",
     "babel-loader": "^5.0.0",
     "jquery": "^2.1.3",
+    "lodash": "^3.7.0",
     "numeral": "^1.5.3",
     "react": "^0.13.2",
     "reflux": "^0.2.7",
