--- a/client/package.json
+++ b/client/package.json
@@ -7,6 +7,7 @@
     "babel-loader": "^5.0.0",
     "jquery": "^2.1.3",
     "lodash": "^3.7.0",
+    "moment": "^2.10.2",
     "numeral": "^1.5.3",
     "react": "^0.13.2",
     "reflux": "^0.2.7",
